fix: parallax duplicate name Gsap, Enhance Navbar, and Overlap Gsap Animation in ProfileSection.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -39,13 +39,10 @@
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
-#smooth-wrapper {
-    overflow: hidden;
-}
-
-#smooth-content {
-    overflow: visible;
-    width: 100%;
+#smooth-wrapper, #smooth-content {
+  overflow-x: hidden;
+  position: relative;
 }
